@@ -30,7 +30,7 @@ class V3Waiver final {
     static WaiverList s_waiverList VL_GUARDED_BY(s_mutex);
 
 public:
-    static void addEntry(V3ErrorCode errorCode, const string& filename, const std::string& str)
+    static void addEntry(V3ErrorCode errorCode, const string& filename, const std::string& msg)
         VL_MT_SAFE_EXCLUDES(s_mutex);
     static void write(const std::string& filename) VL_MT_SAFE_EXCLUDES(s_mutex);
 };
