@@ -1,10 +1,0 @@
-// DESCRIPTION: Verilator output: Waivers generated with --waiver-output
-
-`verilator_config
-
-// Below you find suggested waivers. You have three options:
-//   1. Fix the reason for the linter warning
-//   2. Keep the waiver permanently if you are sure this is okay
-//   3. Keep the waiver temporarily to suppress the output
-
-// No waivers needed - great!
